--- a/contact-list/contact-form.html
+++ b/contact-list/contact-form.html
@@ -79,7 +79,7 @@
       </div>
       <div class="form-group">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="inputCloseFriend" id="closeFriend">
+          <input class="form-check-input" type="checkbox" id="inputCloseFriend" name="closeFriend">
           <label class="form-check-label" for="inputCloseFriend">
             Close Friend
           </label>
