--- a/contact-list/contact-master.html
+++ b/contact-list/contact-master.html
@@ -15,13 +15,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="new.html">New</a>
+                <a class="nav-link" href="/contact/add">Add</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="list.html">List</a>
+                <a class="nav-link" href="/contact/list">List</a>
               </li>
             </ul>
           </div>
